--- a/client-side/registration.html
+++ b/client-side/registration.html
@@ -95,7 +95,9 @@
 
                     <div class="form-buttons">
                         <button type="submit" class="btn">🎟️ Submit Registration</button>
-                        <button type="button" class="btn btn-secondary" onclick="goBack()">← Go Back</button>
+                        <button type="button" class="btn btn-secondary" onclick="goBackToEvent()">← Back to Event</button>
+                        <button type="button" class="btn btn-secondary" onclick="goToHome()">🏠 Homepage</button>
+                        <button type="button" class="btn btn-secondary" onclick="browseAllEvents()">🔍 Browse Events</button>
                     </div>
                 </form>
             </div>
