--- a/client-side/event-details.html
+++ b/client-side/event-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charity Events - Event Details</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
@@ -12,7 +12,8 @@
             <h1>🤝 Charity Events</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="search.html">Search Events</a></li>
+                <li><a href="search.html">Search</a></li>
+                <li><a href="registration.html">Register</a></li>
             </ul>
         </div>
     </nav>
@@ -36,7 +37,7 @@
         </div>
     </main>
 
-
-    <script src="/js/event-details.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/event-details.js"></script>
 </body>
 </html>
