--- a/client-side/index.html
+++ b/client-side/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charity Events - Home</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="search.html">Search</a></li>
+                <li><a href="registration.html">Register</a></li>
             </ul>
         </div>
     </nav>
@@ -42,60 +43,8 @@
         </section>
     </main>
 
-    <script>
-        // 获取事件数据并显示
-        async function loadEvents() {
-            try {
-                const response = await fetch('/api/events/home');
-                const result = await response.json();
-                
-                const container = document.getElementById('event-list');
-                
-                if (result.success && result.data.length > 0) {
-                    // 有事件数据，显示事件卡片
-                    container.innerHTML = result.data.map(event => `
-                        <div class="event-card">
-                            <h4>${event.name}</h4>
-                            <p><strong>Date:</strong> ${new Date(event.date).toLocaleDateString('en-US', { 
-                                weekday: 'long', 
-                                year: 'numeric', 
-                                month: 'long', 
-                                day: 'numeric' 
-                            })}</p>
-                            <p><strong>Time:</strong> ${new Date(event.date).toLocaleTimeString('en-US', {
-                                hour: '2-digit',
-                                minute: '2-digit'
-                            })}</p>
-                            <p><strong>Location:</strong> ${event.location}</p>
-                            <p><strong>Category:</strong> ${event.category_name}</p>
-                            <p>${event.description}</p>
-                            <p class="ticket-price"><strong>Ticket Price:</strong> $${event.ticket_price}</p>
-                            <p class="fundraising-goal"><strong>Fundraising Goal:</strong> $${event.goal_amount} | <strong>Raised:</strong> $${event.progress_amount}</p>
-                            <a href="/event-details.html?id=${event.id}" class="view-details-btn">View Details</a>
-                        </div>
-                    `).join('');
-                } else {
-                    // 没有事件数据
-                    container.innerHTML = `
-                        <div class="no-events">
-                            <p><strong>No Upcoming Events</strong></p>
-                            <p>There are currently no upcoming charity events. Please check back later for new events!</p>
-                            <p>You can also check our <a href="/search.html">search page</a> for all events.</p>
-                        </div>
-                    `;
-                }
-            } catch (error) {
-                console.error('Error loading events:', error);
-                document.getElementById('event-list').innerHTML = `
-                    <div class="error-message">
-                        <p>Error loading events. Please try again later.</p>
-                    </div>
-                `;
-            }
-        }
 
-        // 页面加载时获取事件数据
-        document.addEventListener('DOMContentLoaded', loadEvents);
-    </script>
+    <script src="./js/main.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 </html>
